--- a/application/views/default/index.html
+++ b/application/views/default/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h3>Yaf Demo</h3>
-    a href="{{ url('default/test', {'id':'1', 'name':'codejm'}) }}" >URL</a>
+    <a href="{{ url('default/test', {'id':'1', 'name':'codejm'}) }}" >URL</a>
 </body>
 </html>
